
    - Added `.cp` and `.CP` as known C++ suffixes.

    - Improved logging.

    - Added `-install_name` as an option known to take an argument. (This
      improves statistics when using the Darwin linker.)


Bug fixes
~~~~~~~~~

    - Non-fatal error messages are now never printed to stderr but logged
      instead.

    - Fixed a bug affecting failing commands when `--ccache-skip` is used.


Other
~~~~~

    - Work on porting ccache to win32 (native), mostly done by Ramiro Polla.
      The port is not yet finished, but will hopefully be complete in some
      subsequent release.

    - Added a `--nostats` flag to the performance benchmark program.

    - Made the performance benchmark program more accurate when measuring cache
      hits.

    - Added a new test framework for unit tests written in C.

    - Got rid of `configure-dev`; dev mode is now given by `dev.mk.in`
      presence.

    - Improved documentation on how to combine ccache with other compiler
      wrappers (like `distcc`).

    - New `LICENSE.txt` file with licensing and copyright details about bundled
      source code.

    - New `AUTHORS.txt` file with a list of ccache contributors.

    - New `HACKING.txt` file with some notes about ccache code conventions.


ccache 3.0.1
------------
Release date: 2010-07-15

Bug fixes
~~~~~~~~~

    - The statistics counter ``called for link'' is now correctly updated when
      linking with a single object file.
    - Fixed a problem with out-of-source builds.


ccache 3.0
----------
Release date: 2010-06-20

General
~~~~~~~

    - ccache is now licensed under the GNU General Public License (GPL) version
      3 or later.


Upgrade notes
~~~~~~~~~~~~~

    - The way the hashes are calculated has changed, so you won't get cache
      hits for compilation results stored by older ccache versions. Because of
      this, you might as well clear the old cache directory with `ccache
      --clear` if you want, unless you plan to keep using an older ccache