@@ -150,9 +150,8 @@ Extra options
 
 When run as a compiler, ccache usually just takes the same command line options
 as the compiler you are using. The only exception to this is the option
-*--ccache-skip*. That option can be used to tell ccache that the next option is
-definitely not a input filename, and should be passed along to the compiler
-as-is.
+*--ccache-skip*. That option can be used to tell ccache to avoid interpreting
+the next option in any way and to pass it along to the compiler as-is.
 
 The reason this can be important is that ccache does need to parse the command
 line and determine what is an input filename and what is a compiler option, as
@@ -161,6 +160,10 @@ it needs the input filename to determine the name of the resulting object file
 is that any argument that exists as a file is treated as an input file name. By
 using *--ccache-skip* you can force an option to not be treated as an input
 file name and instead be passed along to the compiler as a command line option.
+
+Another case where *--ccache-skip* can be useful is if ccache interprets an
+option specially but shouldn't, since the option has another meaning for your
+compiler than what ccache thinks.
 
 
 Environment variables
